Changed footer to stop white space

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,8 @@ body {
 
 header {
     position: fixed;
+    padding-left: 5em;
+    padding-right: 5em;
     width: 100%;
     top: 0;
     left: 0;
@@ -62,7 +64,6 @@ option {
 }
 
 .navbar_container {
-    position: relative;
     margin: 0 auto;
     width: 100%;
     height: 20%;
@@ -226,24 +227,23 @@ option {
 
 .footer_section {
     position: absolute;
+    padding-left: 5em;
+    padding-right: 5em;
     width: 100%;
     height: 80px;
     background: rgba(255, 255, 255, 0.1);
     bottom: 0%;
     z-index: 999;
+    display: flex;
+    align-items: center;
 }
 
 .footer_container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 1440px;
+    width: 100%;
     height: 64px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1440px;
 }
 
 /* Footer mobile*/
